<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp" >

    <ImageButton
        android:id="@+id/ib_back"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:onClick="login"
        android:src="@drawable/back"
        android:visibility="invisible" />

    <LinearLayout
        android:id="@+id/center_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:padding="15dp" >

        <EditText
            android:id="@+id/et_un"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="@string/allowing_chars"
            android:hint="@string/et_un"
            android:text="qinfei"
            android:inputType="text" />

        <EditText
            android:id="@+id/et_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="@string/allowing_chars"
            android:hint="@string/et_pw"
            android:text="qin199224"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/et_pw_re"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="@string/allowing_chars"
            android:hint="@string/et_pw_re"
            android:inputType="textPassword"
            android:visibility="gone" />

        <EditText
            android:id="@+id/et_pw_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="@string/allowing_chars"
            android:hint="@string/et_pw_new"
            android:inputType="textPassword"
            android:visibility="gone" />

        <EditText
            android:id="@+id/et_pw_new_re"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="@string/allowing_chars"
            android:hint="@string/et_pw_new_re"
            android:inputType="textPassword"
            android:visibility="gone" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="@string/allowing_chars"
            android:hint="@string/et_email"
            android:inputType="textEmailAddress"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="submitInfo"
            android:text="@string/btn_login" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/bottom_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <TextView
            android:id="@+id/tv_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:clickable="true"
            android:onClick="createAccount"
            android:text="@string/tv_create" />

        <TextView
            android:id="@+id/tv_retrieve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:clickable="true"
            android:onClick="retrievePassword"
            android:text="@string/tv_retrieve" />

        <TextView
            android:id="@+id/tv_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/tv_retrieve"
            android:layout_toRightOf="@id/tv_create"
            android:clickable="true"
            android:gravity="center"
            android:onClick="changePassword"
            android:text="@string/tv_change" />
    </RelativeLayout>

    <ProgressBar
        android:id="@+id/pb_executing"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="invisible" />

</RelativeLayout>